Datetimepickers no longer stretch down with newslist

--- a/papukaaniApp/static/papukaani/css/general.css
+++ b/papukaaniApp/static/papukaani/css/general.css
@@ -61,6 +61,10 @@ body {
 
 #news {
     padding: 20px;
+    overflow: auto;
+    height: calc(100vh - 50px);
+    max-height:calc(100vh - 50px);
+    box-sizing: border-box;
 }
 
 #url {
